# tank_wars

./: .gitignore  CMakeLists.txt  README  c_flag_overrides.cmake  cxx_flag_overrides.cmake  full_evolution.sh  implementation_notes.txt
CMakeModules/: FindBox2d.cmake  FindClanLib.cmake
archive/: gv.txt  gvc.txt  gvc2.txt  gvc3.txt  gvc4.txt  gvg.txt  gvg3.txt  gvg4.txt  run_1.txt  run_2.txt  run_3.txt  run_4.txt  run_5.txt  sv.txt
include/: exports.h  game_display.h  itwgame.h  operations.h  types.h
include/data_store/: data_store.h  ds_types.h
include/evolvers/: evolver_cpu.h  evolver_gpu.h  ievolver.h
include/game_core/: basictank.h  collision_checker.h  physics.h  tank_ai.h  tankbullet.h
include/game_scene/: gsgame.h  gsgene_view.h  gslobby.h  gsmenu.h  gsoptions.h  gssim_view.h  igamescene.h
include/tw_impl/: twgame_cpu.h  twgame_gpu.h
include/ui/: button.h
include/util/: enum.h  util.h
resources/: game_resource.xml
resources/shaders/: bloom.glsl  fragment.glsl  vertex.glsl
src/: CMakeLists.txt  event_replay.cpp  evolver.cpp  genetic_diff.cpp  gview.cpp  qcheck.cu  query_gene.cpp  sview.cpp  tank_game.cpp  twgame_cpu.cpp  twgame_gpu.cu
src/data_store/: data_store.cpp
src/evolvers/: evolver_cpu.cpp  evolver_gpu.cu
src/game_core/: basictank.cu  collision_checker.cu  physics.cu  tank_ai.cu  tankbullet.cu  twgame.cu
src/game_scene/: gsgame.cpp  gsgame.cu  gsgene_view.cu  gslobby.cpp  gsmenu.cpp  gsoptions.cpp  gssim_view.cu
src/ui/: button.cpp
